<resources>
    <string name="app_name">HackRU</string>
    <string name="title_announcements">Announcements</string>
    <string name="title_timer">Timer</string>
    <string name="title_events">Events</string>
    <string name="title_map">Map</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_settings">Settings</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_about">About</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>

    <!-- Events for scanning -->
    <string-array name="scanner_events">
        <item>Check-in</item>
        <item>Lunch 1</item>
        <item>Dinner</item>
        <item>Shirts</item>
        <item>Midnight Surprise</item>
        <item>Breakfast</item>
        <item>Lunch 2</item>
    </string-array>

    <!-- Timer -->
    <string name="timer_count_title">Time Left:</string>
    <string name="timer_default_count">00:00:00</string>

    <!-- Login -->
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_login_label">Login</string>
    <string name="login_create_account_label"><u>Create an account</u></string>

    <!-- Accessibility -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="qr_image_description">Your QR code ticket</string>


    <!-- Navigation Drawer -->
    <string name="navigation_drawer_name_default">Unknown User</string>
    <string name="navigation_drawer_email_default">Login to access your ticket</string>

    <!-- About Page -->
    <string name="about_page_description">The HackRU Android app is an open source effort made possible by the HackRU Research \&amp; Development team. Check out our GitHub below to view the source code and help contribute!</string>
    <string name="url_website">https://www.hackru.org/</string>
    <string name="twitter_handle">thehackru</string>
    <string name="facebook_handle">theHackRU</string>
    <string name="github_handle">HackRU/one-app-android/</string>

    <!-- Map -->
    <string name="map_failure_message">Failed to load the map, please try again.</string>

    <!-- Network Errors -->
    <string name="network_error_no_internet">Couldn\'t load data (no internet)</string>
    <string name="network_error_deserialization">Couldn\'t load data (server error)</string>
    <string name="network_error_unknown">Couldn\'t load data (unknown error)</string>
</resources>
